# pulumi-gcp-project-factory

./: .bumpversion.cfg  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/budget_project/: Pulumi.yaml  __main__.py  requirements.txt
examples/project_services/: Pulumi.yaml  __main__.py
examples/quota_project/: Pulumi.yaml  __main__.py  requirements.txt
examples/simple_project/: .gitignore  Pulumi.yaml
src/pulumi_gcp_project_factory/: budget.py  core_project_factory.py  project_factory.py  project_services.py  quota_manager.py  shared_vpc_access.py
tests/: test_budget.py  test_project_services.py  test_quota_manager.py
