[flake8]
max-line-length = 88
max-complexity = 14
inline-quotes = single
multiline-quotes = double
ignore = E203, W503
exclude = .git,__pycache__,doc/,docs/,build/,dist/,archive/,venv/,.direnv/
per-file-ignores =
  __init__.py:F401

[coverage:run]
source = src
branch = True
context = ${CONTEXT}

[coverage:report]
precision = 2
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    raise NotImplemented
    if TYPE_CHECKING:
    @overload

[isort]
profile = black
multi_line_output=3

[mypy]
show_error_codes = True
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
disallow_any_generics = True
check_untyped_defs = True
no_implicit_reexport = True
warn_unused_configs = True
# disallow_subclassing_any = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True
disallow_untyped_calls = True
ignore_missing_imports = True

[metadata]
name = pulumi_gcp_project_factory
version = attr: pulumi_gcp_project_factory.__version__
author = Inhan Song
author_email = cyrano5614@gmail.com
maintainer       = Inhan Song
maintainer_email = cyrano5614@gmail.com
description = GCP project factory based on terraform package with same name
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zityspace/pulumi-gcp-project-factory
project_urls =
    Bug Tracker = https://github.com/zityspace/pulumi-gcp-project-factory/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    pulumi-gcp==5.9.0
    pulumi-random==4.2.0
    pulumi==3.5.1

[options.package_data]
pulumi_gcp_project_factory = 'py.typed'

[options.packages.find]
where = src
